syntax = "proto3";

message GeneralOmgppMessage {
    message Message{
        int64 type = 1;
        bytes data = 2;
    }
    message RpcCall{
        bool reliable = 3;
        int64 method_id = 4;
        uint64 request_id =5;
        int64 arg_type = 6;
        bytes arg_data = 7;
    }
    message CmdRequest{
        string cmd = 8;
        repeated string args = 9;
        uint64 request_id = 10;
    }
    oneof data{
        Message message = 11;
        RpcCall rpc = 12;
        CmdRequest cmd = 13;
    }
}